[release]Fixed alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -669,7 +669,7 @@ footer .footer_social ul li i {
     margin-top: 0px;
     float: none;
     right: auto !important;
-    left: -530px !important;
+    left: 0px !important;
 }
 
 .mega-menu li {
@@ -778,7 +778,7 @@ footer .footer_social ul li i {
         bottom: 50%;
     }
     .mega-menu {
-        left: -480px !important;
+        left: -370px !important;
         width: 1366px;
     }
 }
@@ -795,7 +795,7 @@ footer .footer_social ul li i {
         font-size: 1.2em;
     }
     .mega-menu {
-        left: -330px !important;
+        left: -270px !important;
         width: 1280px;
     }
 }
@@ -812,7 +812,7 @@ footer .footer_social ul li i {
         width: 20%;
     }
     .mega-menu {
-        left: -150px !important;
+        left: -270px !important;
         width: 1100px;
     }
 }
@@ -835,7 +835,7 @@ footer .footer_social ul li i {
         width: 100%;
     }
     .mega-menu {
-        left: -230px !important;
+        left: -270px !important;
         width: 991px;
     }
 }
@@ -1522,8 +1522,8 @@ footer .footer_social ul li i {
 
 
 .header {
-    padding-right:15% !important;
-    font-size: 1.5em;
+    padding-right:25% !important;
+    font-size: 1em;
 }
 .about-wrapper
 {
